2007-08-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/const.py (VIDEO_PLAYER):
	Use absolute quoted paths on Windows.

	* gaupol/gtk/agents/preview.py (preview):
	Do not call gobject.child_watch_add on Windows.

	* gaupol/gtk/renderers/multiline.py (do_start_editing):
	Sync editor's font to renderer's to fix a Windows bug.

	* gaupol/util.py:
	(browse_url): Do not use os.startfile on Windows.
	(start_process): Do not use shell on Windows.

2007-08-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/gaupol.gtk.conf.spec:
	Change default values of edit.use_custom_font and
	preview.use_custom to False.

2007-08-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/assistants/text/__init__.py:
	Fix module docstring.

2007-08-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/__init__.py:
	  Bumped version number to 0.9.

	* tools/translate:
	Fix xgettext command for extractions from ini-style files.

	RELEASE 0.9

2007-08-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/conf/config.py (__init__):
	Relocate pylint: disable-msg.

	* gaupol/util.py (revertable):
	Wrap function call in a try-finally to always unblock.

2007-08-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn-en.hearing-impaired.in:
	Change pattern to allow digits and spaces.

	* gaupol/gtk/assistants/text/assistant.py (_on_apply):
	Set the mouse pointer busy while working.

2007-08-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/util.py (notify_frozen):
	Wrap function call in a try-finally to always thaw.

2007-08-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/assistants/text/assistant.py (_init_size):
	Make the assistant a bit (two text lines) taller.

2007-08-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/assistants/text/assistant.py (_on_apply):
	Count edits and removals and flash a message in the statusbar.

2007-08-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/parser.py (_shift_tags):
	Partially rewrite and add proper comments.
